{
    "name": "TouchAction",
    "maps": [
        {
            "name": "Touch",
            "id": "ce933535-d82a-4d7c-851d-4c6bd424956f",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "50a307fb-f808-493f-b032-eb9f64ab38e5",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPhase",
                    "type": "Value",
                    "id": "6ed8d0ca-ce5e-43f3-bf55-466680a3daa9",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "970ae053-7e3a-46b9-bbac-3c06a2702f9d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchHold",
                    "type": "Button",
                    "id": "2e3a8001-9b7d-41a2-83ea-3e79345a9f55",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f3bf4b67-2a34-4c92-a693-972987bba332",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f9fd971-3383-4324-b3e9-72784d09b514",
                    "path": "<Touchscreen>/primaryTouch/phase",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPhase",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f207a575-c1d0-4ffd-a2a3-11bed881d91a",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86685ec1-9837-4ef8-ac4b-8e7739fe63fb",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "TouchHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}